--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -69,19 +69,18 @@
 
 
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="h2">My Profile</h1>
-        </div>
-
-        <div class="col-md-12 col-sm-offset-6">
-            <i class="fas fa-user-alt fa-7x" style="align-content: center;"></i>
-        </div>
-
-        <div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h1 class="h2" id="center-qwe" style="margin-bottom: 10px;margin-top: 10px;">My Profile</h1>
+                <i class="fas fa-user-alt fa-7x" id="center-qwe"></i>
+            </div>
+        <!-- <div>
             <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">My Ads</button>
             <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">Post Advertisement</button>
             <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">Post Wanted Ad</button>
-        </div>
+        </div> -->
+            </div>
+        </div>    
     </div>
 
 
