--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -85,6 +85,35 @@
     </div>
     </div>
 
+    <footer id="myFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                </div>
+            </div>
+        </div>
+        <div class="social-networks">
+                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+        </div>
+    </footer>
+
 
     <!--Javascript plugins-->
 
