--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS For Left side Wrapper-->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
+    <!-- Jquery -->
     <script type='text/javascript' src='../js/jquery.js'></script>
 
     <!--Bootstrap.min.css-->
@@ -25,11 +26,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
 
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <!-- Custom CSS file -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
+    <!--Animated.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 
 </head>
 
@@ -67,7 +70,6 @@
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
-
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
@@ -85,7 +87,8 @@
     </div>
     </div>
 
-    <footer id="myFooter">
+    <!-- Footer -->
+    <footer id="myFooter" style="position: absolute; bottom: 0px;" class="col-md-12">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -108,15 +111,16 @@
             </div>
         </div>
         <div class="social-networks">
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
         </div>
     </footer>
 
 
-    <!--Javascript plugins-->
 
+
+    <!--Javascript plugins-->
     <script type='text/javascript' src='../js/jquery.collapsible.min.js'></script>
     <script type='text/javascript' src='../js/swiper.min.js'></script>
     <script type='text/javascript' src='../js/jquery.countdown.min.js'></script>
