--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -88,7 +88,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" style="position: absolute; bottom: 0px;" class="col-md-12">
+    <footer id="myFooter" class="col-md-12">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
