--- a/user_profile/my_ads.html
+++ b/user_profile/my_ads.html
@@ -70,27 +70,48 @@
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
-    <div class="container" style="margin-bottom: 39px;">
+    <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
-                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;">My Profile</h1>
-                <i class="fas fa-user-alt fa-7x" id="center-text" style="margin-bottom: 50px;"></i>
+                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;">My Ads</h1>
             </div>
             <div class="col-md-6"></div>
-            <div class="col-md-12" id="center-text">
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-list-ul" style="margin-right: 10px;"></i>My Ads</button>
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-plus-square" style="margin-right: 10px;"></i>Post Advertisement</button>
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-plus-square" style="margin-right: 10px;"></i>Post Wanted Ad</button>
-            </div>
         </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" class="col-md-12">
+    <footer id="myFooter" class="col-md-12 py-4" >
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
