--- a/user_profile/my_ads.html
+++ b/user_profile/my_ads.html
@@ -77,41 +77,104 @@
             </div>
             <div class="col-md-6"></div>
         </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="col-sm-12">
+            <h3 style="margin-bottom: 10px;margin-top: 10px;">Vehicle Ads</h3>
+        </div>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Toyota Prius</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Toyota Hiace</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Honda Fit</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-12">
+            <h3 style="margin-bottom: 10px;margin-top: 10px;">Spare Parts Ads</h3>
+        </div>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Headlights</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Brake Lights</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Gearbox</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-12">
+            <h3 style="margin-bottom: 10px;margin-top: 10px;">Wanted Ads</h3>
+        </div>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Bajaj Three Wheel 4-Stroke</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Nissan GTR</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Honda S660</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4" >
+    <footer id="myFooter" class="col-md-12 py-4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
