--- a/user_profile/my_ads.html
+++ b/user_profile/my_ads.html
@@ -34,10 +34,10 @@
     <!--Animated.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 
+
 </head>
 
 <body>
-
     <header class="site-header">
         <div class="nav-bar">
             <div class="container">
@@ -93,7 +93,7 @@
                     <tr>
                         <td>Toyota Prius</td>
                         <td><i class="fas fa-pencil-alt"></i></td>
-                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;" id="delete"></i></td>
                     </tr>
                     <tr>
                         <td>Toyota Hiace</td>
@@ -153,7 +153,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Bajaj Three Wheel 4-Stroke</td>
+                        <td>Toyota Supra</td>
                         <td><i class="fas fa-pencil-alt"></i></td>
                         <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
                     </tr>
@@ -214,7 +214,6 @@
     <script type='text/javascript' src='../js/jquery.countTo.min.js'></script>
     <script type='text/javascript' src='../js/jquery.barfiller.js'></script>
     <script type='text/javascript' src='../js/custom.js'></script>
-
 </body>
 
 </html>
