--- a/user_profile/edit_profile.html
+++ b/user_profile/edit_profile.html
@@ -77,7 +77,7 @@
             </div>
             <div class="col-md-6"></div>
         </div>
-        <div>
+        <div class="col-md-6 offset-md-3">
             <form>
                 <div class="form-group">
                     <label for="InputContactNo">Name</label>
@@ -92,7 +92,7 @@
                     <label for="exampleInputPassword1">Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
-                <form>
+                <div class="form-group">
                     <label class="my-1 mr-2 col-sm-12" for="inlineFormCustomSelectPref">City</label>
                     <select class="custom-select my-1 mr-sm-2 col-sm-12" id="inlineFormCustomSelectPref">
                         <option selected>Choose...</option>
@@ -100,7 +100,7 @@
                         <option value="2">Kandy</option>
                         <option value="3">Negombo</option>
                     </select>
-                </form>
+                </div>
                 <div class="form-group">
                     <label for="InputAddress">Address</label>
                     <input type="number" class="form-control" id="InputAddress" aria-describedby="emailHelp"
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4">
+    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
