Added new Cities, removed password and added contact no. field

--- a/user_profile/edit_profile.html
+++ b/user_profile/edit_profile.html
@@ -80,8 +80,8 @@
         <div class="col-md-6 offset-md-3">
             <form>
                 <div class="form-group">
-                    <label for="InputContactNo">Name</label>
-                    <input type="text" class="form-control" id="InputContactNo" aria-describedby="emailHelp"
+                    <label for="InputName">Name</label>
+                    <input type="text" class="form-control" id="InputName" aria-describedby="emailHelp"
                         placeholder="Enter name">
                 </div>
                 <div class="form-group">
@@ -89,24 +89,23 @@
                     <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
+                        <label for="InputContactNo">Contact No.</label>
+                        <input type="text" class="form-control" id="InputContactNo" aria-describedby="emailHelp"
+                            placeholder="Contact No.">
+                    </div>
                 <div class="form-group">
                     <label class="my-1 mr-2 col-sm-12" for="inlineFormCustomSelectPref">City</label>
                     <select class="custom-select my-1 mr-sm-2 col-sm-12" id="inlineFormCustomSelectPref">
                         <option selected>Choose...</option>
-                        <option value="1">Colombo</option>
-                        <option value="2">Kandy</option>
-                        <option value="3">Negombo</option>
+                        <option value="Ambalangoda">Ambalangoda</option><option value="Ampara">Ampara</option><option value="Anuradapura">Anuradapura</option><option value="Avissawella">Avissawella</option><option value="Bandaragama">Bandaragama</option><option value="Badulla">Badulla</option><option value="Balangoda">Balangoda</option><option value="Bandarawela">Bandarawela</option><option value="Battaramulla">Battaramulla</option><option value="Batticaloa">Batticaloa</option><option value="Beruwala">Beruwala</option><option value="Boralesgamuwa">Boralesgamuwa</option><option value="Chavakacheri">Chavakacheri</option><option value="Chilaw">Chilaw</option><option selected="selected" value="Colombo">Colombo</option><option value="Daluguma">Daluguma</option><option value="Dambulla">Dambulla</option><option value="Dehiwala-Mount-Lavinia">Dehiwala-Mount-Lavinia</option><option value="Divulapitiya">Divulapitiya</option><option value="Dompe">Dompe</option><option value="Eheliyagoda">Eheliyagoda</option><option value="Embilipitiya">Embilipitiya</option><option value="Eravur">Eravur</option><option value="Galle">Galle</option><option value="Gampaha">Gampaha</option><option value="Gampola">Gampola</option><option value="Hambantota">Hambantota</option><option value="Haputale">Haputale</option><option value="Harispattuwa">Harispattuwa</option><option value="Hatton">Hatton</option><option value="Hendala">Hendala</option><option value="Homagama">Homagama</option><option value="Horana">Horana</option><option value="Ja-Ela">Ja-Ela</option><option value="Jaffna">Jaffna</option><option value="Kadawatha">Kadawatha</option><option value="Kadugannawa">Kadugannawa</option><option value="Kaduwela">Kaduwela</option><option value="Kalawana">Kalawana</option><option value="Kalmunai">Kalmunai</option><option value="Kalutara">Kalutara</option><option value="Kandana">Kandana</option><option value="Kandy">Kandy</option><option value="Kattankudy">Kattankudy</option><option value="Katunayake">Katunayake</option><option value="Kegalle">Kegalle</option><option value="Kelaniya">Kelaniya</option><option value="Kesbewa">Kesbewa</option><option value="Keselwatta">Keselwatta</option><option value="Kilinochchi">Kilinochchi</option><option value="Kiribathgoda">Kiribathgoda</option><option value="Kolonnawa">Kolonnawa</option><option value="Kotikawatta">Kotikawatta</option><option value="Kotte">Kotte</option><option value="Kuliyapitiya">Kuliyapitiya</option><option value="Kurunegala">Kurunegala</option><option value="Maharagama">Maharagama</option><option value="Mannar">Mannar</option><option value="Matale">Matale</option><option value="Matara">Matara</option><option value="Matugama">Matugama</option><option value="Minuwangoda">Minuwangoda</option><option value="Mirigama">Mirigama</option><option value="Moneragala">Moneragala</option><option value="Moratuwa">Moratuwa</option><option value="Mullaitivu">Mullaitivu</option><option value="Mulleriyawa">Mulleriyawa</option><option value="Nawalapitiya">Nawalapitiya</option><option value="Negombo">Negombo</option><option value="Nittambuwa">Nittambuwa</option><option value="Nuwara-Eliya">Nuwara-Eliya</option><option value="Panadura">Panadura</option><option value="Peliyagoda">Peliyagoda</option><option value="Piliyandala">Piliyandala</option><option value="Polgahawela">Polgahawela</option><option value="Polonnaruwa">Polonnaruwa</option><option value="Puttalam">Puttalam</option><option value="Ragama">Ragama</option><option value="Ratnapura">Ratnapura</option><option value="Seethawakapura">Seethawakapura</option><option value="Sigiriya">Sigiriya</option><option value="Talawakele">Talawakele</option><option value="Tangalle">Tangalle</option><option value="Trincomalee">Trincomalee</option><option value="Valvettithurai">Valvettithurai</option><option value="Vavuniya">Vavuniya</option><option value="Wattala">Wattala</option><option value="Wattegama">Wattegama</option><option value="Weligama">Weligama</option><option value="Welimada">Welimada</option><option value="Welisara">Welisara</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="InputAddress">Address</label>
-                    <input type="number" class="form-control" id="InputAddress" aria-describedby="emailHelp"
+                    <input type="text" class="form-control" id="InputAddress" aria-describedby="emailHelp"
                         placeholder="Enter name">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
         </div>
     </div>
