--- a/user_profile/expired_ads.html
+++ b/user_profile/expired_ads.html
@@ -73,31 +73,43 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
-                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;">Change Password</h1>
+                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;">Expired Advertisements</h1>
             </div>
             <div class="col-md-6"></div>
         </div>
-        <div class="col-md-6 offset-md-3">
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Old Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">New Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Confirm New Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm New Password">
-                </div>
-                <button type="submit" class="btn btn-primary">Change Password</button>
-            </form>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Toyota Prius</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;" id="delete"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Toyota Hiace</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Honda Fit</td>
+                        <td><i class="fas fa-pencil-alt"></i></td>
+                        <td><i class="fas fa-trash-alt" style="color: red;"></i></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+    </div>
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 50px;">
+    <footer id="myFooter" class="col-md-12 py-4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
