--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -78,8 +78,8 @@
             </div>
             <div class="col-md-6"></div>
             <div class="col-md-12" id="center-text">
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-list-ul" style="margin-right: 10px;"></i>My Ads</button>
+                    <a href="./my_ads.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
+                    <i class="fas fa-list-ul" style="margin-right: 10px;"></i>My Ads</button></a>
                 <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
                     <i class="fas fa-plus-square" style="margin-right: 10px;"></i>Post Advertisement</button>
                 <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
