--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -53,6 +53,12 @@
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
                                 <li><a href="#">Post a Ad</a></li>
                                 <li><a href="../contact.html">Contact Us</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">My Profile</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">Edit Profile</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">Change Password</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">Expired Ads</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">Favourites</a></li>
+                                <li class="d-block d-sm-none"><a href="../contact.html">Logout</a></li>
                             </ul>
                         </nav><!-- .site-navigation -->
 
