linked Pages with side bar

--- a/post_ads/bike_ad.html
+++ b/post_ads/bike_ad.html
@@ -83,8 +83,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
-                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;"><i class="fas fa-car fa-lg" style="margin-right:20px"></i>Sell Vehicle</h1>
-            </div>
+                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;"><i class="fas fa-motorcycle fa-lg" style="margin-right:20px"></i>Sell Bike</h1>
+            </div> 
             <div class="col-md-6"></div>
         </div>
         <div class="container col-md-6 offset-md-3 col-sm-12">
@@ -97,15 +97,7 @@
                                 <option value="2">Registerd</option>
                                 <option value="3">Un-Registerd</option>
                         </select>
-                    </div> 
-
-                    <div class="form-group ">
-                        <label for="exampleInputEmail1" class="col-sm-12 col-md-6" >Vehicle Type</label>
-                        <select class="custom-select col-md-6 col-sm-12 ">
-                            <option selected>Select Type</option>
-                            <option value="Car">Car</option><option value="Van">Van</option><option value="Jeep">Jeep</option><option value="Crew Cab">Crew Cab</option><option value="Sport">Sport</option><option value="Wagon">Wagon</option><option value="Pickup">Pickup</option><option value="Bus">Bus</option><option value="Lorry">Lorry</option><option value="Truck">Truck</option><option value="Three Wheel">Three Wheel</option><option value="Tractor">Tractor</option><option value="Heavy-Duty">Heavy-Duty</option><option value="Other">Other</option></select>
-                        </select>
-                    </div> 
+                    </div>  
 
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Vehicle Brand</label>
@@ -134,25 +126,27 @@
                     </div> 
 
                     <div class="form-group">
+                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Engine Capacity</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Engine Capacity">
+                    </div>
+
+                    <div class="form-group">
                             <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Transmission</label>
                             <select class="custom-select col-md-6 col-sm-12 ">
                                 <option selected>Select Transmission</option>
-                                <option value="Automatic">Automatic</option><option value="Manual">Manual</option><option value="Manual">Tryptonic</option>
+                                <option value="Automatic">Automatic</option><option value="Manual">Manual</option>
                             </select>
                     </div>
 
                     <div class="form-group">
-                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Fuel Type</label>
+                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Start Type</label>
                             <select class="custom-select col-md-6 col-sm-12 ">
-                                <option selected>Select Fuel Type</option>
-                                <option value="Diesel">Diesel</option><option value="Petrol">Petrol</option><option value="Electric">Electric</option><option value="Hybrid">Hybrid</option><option value="Gas">Gas</option>
+                                <option selected>Select Start</option>
+                                <option value="Diesel">Kick</option><option value="Petrol">Electric</option><option value="Electric">Electric</option><option value="Hybrid">Kick / Electric</option>>
                             </select>
                     </div>
                     
-                    <div class="form-group">
-                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Engine Capacity</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Engine Capacity">
-                    </div>
+                   
 
                     <div class="form-group">
                             <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Millage (km)</label>
