--- a/post_ads/post_ads.html
+++ b/post_ads/post_ads.html
@@ -53,12 +53,16 @@
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
                                 <li><a href="#">Post a Ad</a></li>
                                 <li><a href="../contact.html">Contact Us</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">My Profile</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">Edit Profile</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">Change Password</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">Expired Ads</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">Favourites</a></li>
-                                <li class="d-block d-sm-none"><a href="../contact.html">Logout</a></li>
+                                <hr style="color:white">
+                                <li class="d-block d-sm-none"><a href="../user_profile/my_profile.html">My Profile</a></li>
+                                <li class="d-block d-sm-none"><a href="../user_profile/my_ads.html">My Advertisements</a></li>
+                                <li class="d-block d-sm-none"><a href="./post_ads.html">Post Advertisements</a></li>
+                                <li class="d-block d-sm-none"><a href="./vehicle_ad.html">Sell Vehicles</a></li>
+                                <li class="d-block d-sm-none"><a href="./bike_ad.html">Sell Bikes</a></li>
+                                <li class="d-block d-sm-none"><a href="./vehicle_parts_ad.html">Sell Vehicle Parts</a></li>
+                                <li class="d-block d-sm-none"><a href="./wanted_ad.html">Wanted Ads</a></li>
+                                <li class="d-block d-sm-none"><a href="./contact_info.html">Contact Information</a></li>
+                                <li class="d-block d-sm-none"><a href="../index.html">Logout</a></li>
                             </ul>
                         </nav><!-- .site-navigation -->
 
@@ -85,12 +89,12 @@
             <div class="col-md-6"></div>
             <br/> <br/>
             <div class="col-md-12" id="center-text">
-                    <a href="./vehicle_ad.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-car" style="margin-right: 10px;"></i>Sell Vehicle</button></a>
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-motorcycle" style="margin-right: 10px;"></i>Sell Bike</button>
-                <button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
-                    <i class="fas fa-wrench" style="margin-right: 10px;"></i>Sell Vehicle Parts</button>
+                <a href="./vehicle_ad.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
+                    <i class="fas fa-car" style="margin-right: 10px;"></i>Sell Vehicles</button></a>
+                <a href="./bike_ad.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
+                    <i class="fas fa-motorcycle" style="margin-right: 10px;"></i>Sell Bikes</button></a>
+                <a href="./vehicle_parts_ad.html"><button class="btn btn-success col-sm-12 col-md-3 col-lg-3" style="margin-bottom: 20px;">
+                    <i class="fas fa-wrench" style="margin-right: 10px;"></i>Sell Vehicle Parts</button></a>
             </div>
         </div>
     </div>
