--- a/post_ads/wanted_ad.html
+++ b/post_ads/wanted_ad.html
@@ -83,8 +83,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
-                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;"><i class="fas fa-car fa-lg" style="margin-right:20px"></i>Sell Vehicle</h1>
-            </div>
+                <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;"><i class="fas fa-retweet fa-lg" style="margin-right:20px"></i>Wanted Advertisement</h1>
+            </div> 
             <div class="col-md-6"></div>
         </div>
         <div class="container col-md-6 offset-md-3 col-sm-12">
@@ -100,12 +100,13 @@
                     </div> 
 
                     <div class="form-group ">
-                        <label for="exampleInputEmail1" class="col-sm-12 col-md-6" >Vehicle Type</label>
-                        <select class="custom-select col-md-6 col-sm-12 ">
-                            <option selected>Select Type</option>
-                            <option value="Car">Car</option><option value="Van">Van</option><option value="Jeep">Jeep</option><option value="Crew Cab">Crew Cab</option><option value="Sport">Sport</option><option value="Wagon">Wagon</option><option value="Pickup">Pickup</option><option value="Bus">Bus</option><option value="Lorry">Lorry</option><option value="Truck">Truck</option><option value="Three Wheel">Three Wheel</option><option value="Tractor">Tractor</option><option value="Heavy-Duty">Heavy-Duty</option><option value="Other">Other</option></select>
-                        </select>
-                    </div> 
+                            <label for="exampleInputEmail1" class="col-sm-12 col-md-6" >Vehicle Type</label>
+                            <select class="custom-select col-md-6 col-sm-12 ">
+                                <option selected>Select Type</option>
+                                <option value="Car">Bike</option>
+                                <option value="Car">Car</option><option value="Van">Van</option><option value="Jeep">Jeep</option><option value="Crew Cab">Crew Cab</option><option value="Sport">Sport</option><option value="Wagon">Wagon</option><option value="Pickup">Pickup</option><option value="Bus">Bus</option><option value="Lorry">Lorry</option><option value="Truck">Truck</option><option value="Three Wheel">Three Wheel</option><option value="Tractor">Tractor</option><option value="Heavy-Duty">Heavy-Duty</option><option value="Other">Other</option></select>
+                            </select>
+                        </div> 
 
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Vehicle Brand</label>
@@ -116,47 +117,8 @@
                     </div> 
 
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Model</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Model">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Year</label>
-                        <select class="custom-select col-md-6 col-sm-12 ">
-                            <option selected>Select Year</option>
-                            <option value="2018">2018</option><option value="2017">2017</option><option value="2016">2016</option><option value="2015">2015</option><option value="2014">2014</option><option value="2013">2013</option><option value="2012">2012</option><option value="2011">2011</option><option value="2010">2010</option><option value="2009">2009</option><option value="2008">2008</option><option value="2007">2007</option><option value="2006">2006</option><option value="2005">2005</option><option value="2004">2004</option><option value="2003">2003</option><option value="2002">2002</option><option value="2001">2001</option><option value="2000">2000</option><option value="1999">1999</option><option value="1998">1998</option><option value="1997">1997</option><option value="1996">1996</option><option value="1995">1995</option><option value="1994">1994</option><option value="1993">1993</option><option value="1992">1992</option><option value="1991">1991</option><option value="1990">1990</option><option value="1989">1989</option><option value="1988">1988</option><option value="1987">1987</option><option value="1986">1986</option><option value="1985">1985</option><option value="1984">1984</option><option value="1983">1983</option><option value="1982">1982</option><option value="1981">1981</option><option value="1980">1980</option><option value="1979">1979</option><option value="1978">1978</option><option value="1977">1977</option><option value="1976">1976</option><option value="1975">1975</option><option value="1974">1974</option><option value="1973">1973</option><option value="1972">1972</option><option value="1971">1971</option><option value="1970">1970</option><option value="1969">1969</option><option value="1968">1968</option><option value="1967">1967</option><option value="1966">1966</option><option value="1965">1965</option><option value="1964">1964</option><option value="1963">1963</option><option value="1962">1962</option><option value="1961">1961</option><option value="1960">1960</option><option value="1959">1959</option><option value="1958">1958</option><option value="1957">1957</option><option value="1956">1956</option><option value="1955">1955</option><option value="1954">1954</option><option value="1953">1953</option><option value="1952">1952</option><option value="1951">1951</option><option value="1950">1950</option><option value="1949">1949</option><option value="1948">1948</option><option value="1900">Before 1948</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Price (Rs.)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter price (negotiable)">
-                    </div> 
-
-                    <div class="form-group">
-                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Transmission</label>
-                            <select class="custom-select col-md-6 col-sm-12 ">
-                                <option selected>Select Transmission</option>
-                                <option value="Automatic">Automatic</option><option value="Manual">Manual</option><option value="Manual">Tryptonic</option>
-                            </select>
-                    </div>
-
-                    <div class="form-group">
-                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 " >Fuel Type</label>
-                            <select class="custom-select col-md-6 col-sm-12 ">
-                                <option selected>Select Fuel Type</option>
-                                <option value="Diesel">Diesel</option><option value="Petrol">Petrol</option><option value="Electric">Electric</option><option value="Hybrid">Hybrid</option><option value="Gas">Gas</option>
-                            </select>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Engine Capacity</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Engine Capacity">
-                    </div>
-
-                    <div class="form-group">
-                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Millage (km)</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Millage">
+                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Title</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Title">
                         </div>
 
                     <div class="form-group">
