updated the footter and page links

--- a/post_ads/contact_info.html
+++ b/post_ads/contact_info.html
@@ -45,7 +45,7 @@
                     <div class="col-12 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
                             <a class="d-block" href="../index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
-                            <a href="#"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; "
+                            <a href="../user_profile/my_profile.html"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; "
                                     data-toggle="tooltip" title="Login"></i></a>
                         </div><!-- .site-branding -->
 
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 50px;">
+    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -134,13 +134,34 @@
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>About us</h5>
+                    <h5>Learn More</h5>
+                    <ul>
+                        <li><a href="#">How to Sell Fast</a></li>
+                        <li><a href="#">Riyasewana Compare</a></li>
+                        <li><a href="#">Buy Now on Riyasewana</a></li>
+                        <li><a href="#">Membership</a></li>
+                        <li><a href="#">Advertising</a></li>
+                        <li><a href="#">Promote Your ad</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Help And Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                       
                 </div>
                 <div class="col-sm-3">
                     <h5>About us</h5>
-                </div>
-                <div class="col-sm-3">
-                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">Terms And Conditions</a></li>
+                        <li><a href="#">Privaxy Policy</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
