--- a/user_profile/my_profile.html
+++ b/user_profile/my_profile.html
@@ -102,19 +102,40 @@
                 <div class="col-sm-3">
                     <h5>Get started</h5>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sign up</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../login/register.html">Sign up</a></li>
                         <li><a href="#">Downloads</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>About us</h5>
+                    <h5>Learn More</h5>
+                    <ul>
+                        <li><a href="#">How to Sell Fast</a></li>
+                        <li><a href="#">Riyasewana Compare</a></li>
+                        <li><a href="#">Buy Now on Riyasewana</a></li>
+                        <li><a href="#">Membership</a></li>
+                        <li><a href="#">Advertising</a></li>
+                        <li><a href="#">Promote Your ad</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Help And Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                        <li><a href="../contactUs.html">Contact Us</a></li>
+                    </ul>
+                       
                 </div>
                 <div class="col-sm-3">
                     <h5>About us</h5>
-                </div>
-                <div class="col-sm-3">
-                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="../contactUs.html">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="../terms.html">Terms And Conditions</a></li>
+                        <li><a href="../privacy.html">Privacy Policy</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
