--- a/user_profile/edit_profile.html
+++ b/user_profile/edit_profile.html
@@ -80,8 +80,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3" style="margin-bottom: 10px">
                 <h1 class="h2" id="center-text" style="margin-bottom: 10px;margin-top: 10px;">Edit Profile</h1>
-                <i class="fas fa-user-alt fa-7x" id="center-text" style="margin-bottom: 50px;"></i>
-                <i class="fas fa-camera"></i>
+                <i class="fas fa-user-edit fa-5x" id="center-text" style="margin-bottom: 50px;"></i>
             </div>
             <div class="col-md-6">
             </div>
