--- a/post_ads/contact_info.html
+++ b/post_ads/contact_info.html
@@ -113,7 +113,7 @@
                 <div class="form-group">
                     <label for="InputAddress">Address</label>
                     <input type="text" class="form-control" id="InputAddress" aria-describedby="emailHelp"
-                        placeholder="Enter name">
+                        placeholder="Enter Address">
                 </div>
                 <button class="btn btn-danger col-md-5 col-sm-12" style="margin-left: 10px; margin-top: 25px"><i class="fas fa-eraser fa-lg" style="margin-right:8px"></i>Reset</button>
                 <button type="submit" class="btn btn-primary col-md-5 col-sm-12" style="margin-left: 10px; margin-top: 25px"><i class="fas fa-save fa-lg" style="margin-right:8px"></i>Save Changes</button>
