vehicle list page and single vehicle page

--- a/VehicleListPage/vehicleListPage-3.html
+++ b/VehicleListPage/vehicleListPage-3.html
@@ -50,7 +50,7 @@
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center d-none d-lg-block">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -61,7 +61,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -72,7 +72,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -83,7 +83,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -94,7 +94,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -105,7 +105,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <li>
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -228,10 +228,10 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="vehicleListPage.html">1</a></li>
-                <li class="page-item"><a class="page-link" href="vehicleListPage-2.html">2</a></li>
-                <li class="page-item"><a class="page-link" href="vehicleListPage-3.html">3</a></li>
-                <li class="page-item"><a class="page-link" href="vehicleListPage-2.html">Next</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
             </ul>
         </nav>
     </div>
