--- a/SingleVehiclePage/singleVehiclePage.html
+++ b/SingleVehiclePage/singleVehiclePage.html
@@ -69,7 +69,7 @@
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="row search">
             <div class="col-md-12">
                 <div class="input-group">
@@ -81,136 +81,138 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
+    <!-- <hr> -->
+    <table class="table">
+        <tr>
 
-    <div class="container btn-md" style="padding-top:2%">
-        <button type="button" class="btn btn-info" style="width:49%;">
-            <span class="glyphicon glyphicon-search"></span>Select Location
-        </button>
-        <button type="button" class="btn btn-info" style="width:49%;">
-            <span class="glyphicon glyphicon-search"></span>Vehicle Category
-        </button>
+            <div class="container btn-sm" style="padding-top:2%">
+                <td>
+                    <button type="button" class="btn btn-info">
+                        <i class="fa fa-reply"></i>
+                        Back
+                    </button>
+            </div>
+            </td>
+            <td>
+                <h3>Dodge Challenger SRT 2016</h3>
+            </td>
+
+        </tr>
+
+    </table>
+    <div class="container" style="width:60%">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="../images/2015-2018-challenger-hellcat-headers.jpg" alt="Los Angeles" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="../images/14939257345_86dd719b73_b.jpg" alt="Chicago" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="../images/dodge-challenger-hellcat-2014-019_0.jpg" alt="New york" style="width:100%;">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
-    <hr>
-    <table style="width:100%">
-        <thead>
+    <table style="text-align: center">
+        <tr>
+            <td>
+                <li class="list-group-item">Rs.13,475,000</li>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <li class="list-group-item"> <i class="fa fa-phone">0772685129</i></li>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <li class="list-group-item">For Sale By Sachin</li>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <li class="list-group-item">Matale</li>
+            </td>
+        </tr>
+    </table>
+    <table style="text-align: center">
+        <ul class="list-inline mx-auto justify-content-center">
             <tr>
-                <th colspan=3 class="text-center">Select your Vehicle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2015-2018-challenger-hellcat-headers.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-dark"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
+                <td>
+                    <li class="list-group-item">Brand : Suzuki</li>
+                </td>
+                <td>
+                    <li class="list-group-item">Model : Wagon R</li>
                 </td>
             </tr>
             <tr>
-                    <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/7.jpg" /></td>
-                    <td style="width:60%">
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-dark"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                            <li class="list-group-item">26,000KM</li>
-                            <li class="list-group-item">Colomobo, Cars</li>
-                            <li class="list-group-item">Rs.1,550,000</li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                        <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2018-toyota-c-hr-review-red-5-640x640.jpg" /></td>
-                        <td style="width:60%">
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-dark"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                                <li class="list-group-item">26,000KM</li>
-                                <li class="list-group-item">Colomobo, Cars</li>
-                                <li class="list-group-item">Rs.1,550,000</li>
-                            </ul>
-                        </td>
-                    </tr>
-        </tbody>
+                <td>
+                    <li class="list-group-item">Model Year : 2016</li>
+                </td>
+                <td>
+                    <li class="list-group-item">Condition : Used</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <li class="list-group-item">Transmission : Automatic </li>
+                </td>
+                <td>
+                    <li class="list-group-item">Body Type : Muscle</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <li class="list-group-item">Fuel Type : Petrol </li>
+                </td>
+                <td>
+                    <li class="list-group-item">Engine capacity : 6400CC</li>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <li class="list-group-item">MileAge : 22,000 KM </li>
+                </td>
+                <td>
+                    <li class="list-group-item">Color : Green</li>
+                </td>
+            </tr>
+        </ul>
     </table>
-    <!--Search Form start-->
+    <div class="container"><strong>Description</strong></div>
+    <div class="container">
+        <p>For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization,
+            WWF
+            works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million
+            globally.</p>
 
-    <!-- <section class="py-2">
-           <div class="container">
-               <div class="row">
-                   <div class="col-md-6 offset-md-3 form">
-                        <form>
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-                        </form>
-                   </div>
-               </div>
-           </div>
-       </section> -->
+    </div>
 
 
-    <section id="footer1" style="" class="py-4">
+    <section id="footer1" class="py-4">
         <div class="container-fluied">
             <div class="row">
 
@@ -262,7 +264,10 @@
     <script type='text/javascript' src='../js/jquery.countTo.min.js'></script>
     <script type='text/javascript' src='../js/jquery.barfiller.js'></script>
     <script type='text/javascript' src='../js/custom.js'></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </body>
 
