--- a/post_ads/wanted_ad.html
+++ b/post_ads/wanted_ad.html
@@ -35,6 +35,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 
 
+    <script>
+            function  confirm() {
+                alert("Ad posted Successfully!");
+            }
+    </script>
+
 </head>
 
 <body>
@@ -143,7 +149,7 @@
                 <div class="col-md-12">
                     <div id="commonCenter"> 
                             <button class="btn btn-danger col-md-5 col-sm-12" style="margin-left: 10px; margin-top: 25px"><i class="fas fa-eraser fa-lg" style="margin-right:8px"></i>Reset</button>
-                            <button class="btn btn-success col-md-5 col-sm-12" style="margin-left: 10px; margin-top: 25px"><i class="far fa-plus-square  fa-lg" style="margin-right:8px"></i>Post Add </button>
+                            <button class="btn btn-success col-md-5 col-sm-12" onclick="confirm()" style="margin-left: 10px; margin-top: 25px"><i class="far fa-plus-square  fa-lg" style="margin-right:8px"></i>Post Add </button>
                     </div>
                 </div> 
             </form>
@@ -151,8 +157,8 @@
     </div>
     </div>
 
-    <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
+   <!-- Footer -->
+   <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -179,7 +185,7 @@
                     <ul>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../contactUs.html">Contact Us</a></li>
                     </ul>
                        
                 </div>
@@ -188,8 +194,8 @@
                     <ul>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Career</a></li>
-                        <li><a href="#">Terms And Conditions</a></li>
-                        <li><a href="#">Privaxy Policy</a></li>
+                        <li><a href="../privacy.html">Terms And Conditions</a></li>
+                        <li><a href="../terms.html">Privacy Policy</a></li>
                         <li><a href="#">Sitemap</a></li>
                     </ul>
                 </div>
