--- a/contactUs.html
+++ b/contactUs.html
@@ -209,7 +209,7 @@
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Career</a></li>
                             <li><a href="./terms.html">Terms And Conditions</a></li>
-                            <li><a href="./privacy.html">Privaxy Policy</a></li>
+                            <li><a href="./privacy.html">Privacy Policy</a></li>
                             <li><a href="#">Sitemap</a></li>
                         </ul>
                     </div>
@@ -219,6 +219,7 @@
                 <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+                <b>© 2009-2018 Riyasewana.</b>
             </div>
         </footer>
 
