--- a/terms.html
+++ b/terms.html
@@ -10,17 +10,6 @@
     <!-- Bootstrap CSS For Left side Wrapper-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-     
-
-    <!--Bootstrap.min.css-->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
-
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
-
-    
-
     <!--Font awesome for icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -135,7 +124,7 @@
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Career</a></li>
                         <li><a href="./terms.html">Terms And Conditions</a></li>
-                        <li><a href="./privacy.html">Privaxy Policy</a></li>
+                        <li><a href="./privacy.html">Privacy Policy</a></li>
                         <li><a href="#">Sitemap</a></li>
                     </ul>
                 </div>
@@ -145,6 +134,7 @@
             <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
             <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+            <b>© 2009-2018 Riyasewana.</b>
         </div>
     </footer>
 
