link login page and change footer

--- a/contactUs.html
+++ b/contactUs.html
@@ -40,7 +40,7 @@
                     <div class="col-12 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
                            <a class="d-block" href="./index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
-                           <a href="#"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; " data-toggle="tooltip" title="Login"></i></a>
+                           <a href="./login/login.html"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; " data-toggle="tooltip" title="Login"></i></a>
                         </div><!-- .site-branding -->
                         
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
@@ -219,6 +219,7 @@
                 <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+                <hr>
                 <b>© 2009-2018 Riyasewana.</b>
             </div>
         </footer>
